Express debugging was buggy. Also, moving counters struct to include/counters.hpp

--- a/data/analayze_ndistinguihsed_points.ipynb
+++ b/data/analayze_ndistinguihsed_points.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ab9a9a76-f670-4a58-8f8a-0b0f99022b9b",
    "metadata": {},
    "outputs": [
@@ -41,15 +41,15 @@
      "output_type": "stream",
      "text": [
       "stats for normal run\n",
-      "#distinguihsed_points required is on avg. 2^11.568 pts, when |C| = 08 bits, diff = 0\n",
-      "#distinguihsed_points required is on avg. 2^11.216 pts, when |C| = 08 bits, diff = 1\n",
-      "#distinguihsed_points required is on avg. 2^10.876 pts, when |C| = 08 bits, diff = 2\n",
-      "#distinguihsed_points required is on avg. 2^10.738 pts, when |C| = 08 bits, diff = 3\n",
+      "#distinguihsed_points required is on avg. 2^14.867 pts, when |C| = 08 bits, diff = 0\n",
+      "#distinguihsed_points required is on avg. 2^13.367 pts, when |C| = 08 bits, diff = 1\n",
+      "#distinguihsed_points required is on avg. 2^14.882 pts, when |C| = 08 bits, diff = 2\n",
+      "#distinguihsed_points required is on avg. 2^14.545 pts, when |C| = 08 bits, diff = 3\n",
       "-------------------------------------------------------------------------\n",
-      "#distinguihsed_points required is on avg. 2^19.203 pts, when |C| = 16 bits, diff = 0\n",
-      "#distinguihsed_points required is on avg. 2^18.795 pts, when |C| = 16 bits, diff = 1\n",
-      "#distinguihsed_points required is on avg. 2^18.974 pts, when |C| = 16 bits, diff = 2\n",
-      "#distinguihsed_points required is on avg. 2^19.423 pts, when |C| = 16 bits, diff = 3\n",
+      "#distinguihsed_points required is on avg. 2^22.282 pts, when |C| = 16 bits, diff = 0\n",
+      "#distinguihsed_points required is on avg. 2^21.552 pts, when |C| = 16 bits, diff = 1\n",
+      "#distinguihsed_points required is on avg. 2^21.393 pts, when |C| = 16 bits, diff = 2\n",
+      "#distinguihsed_points required is on avg. 2^22.609 pts, when |C| = 16 bits, diff = 3\n",
       "-------------------------------------------------------------------------\n",
       "\n",
       "Note: avg. is the geometric mean\n"
@@ -62,7 +62,7 @@
     "# Recall: We made these inputs live in C, so we have to choose between f or g each\n",
     "#         time.\n",
     "\n",
-    "df_normal = pd.read_csv(\"claw_summary.csv.stop_on_witiness.csv\")\n",
+    "df_normal = pd.read_csv(\"claw_summary.csv.normal.csv\")\n",
     "\n",
     "print(\"stats for normal run\")\n",
     "\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0356cb10",
    "metadata": {},
    "outputs": [
@@ -145,15 +145,15 @@
      "output_type": "stream",
      "text": [
       "stats for stopping only on witness\n",
-      "#distinguihsed_points required is on avg. 2^14.867 pts, when |C| = 08 bits, diff = 0\n",
-      "#distinguihsed_points required is on avg. 2^13.367 pts, when |C| = 08 bits, diff = 1\n",
-      "#distinguihsed_points required is on avg. 2^14.882 pts, when |C| = 08 bits, diff = 2\n",
-      "#distinguihsed_points required is on avg. 2^14.545 pts, when |C| = 08 bits, diff = 3\n",
+      "#distinguihsed_points required is on avg. 2^11.568 pts, when |C| = 08 bits, diff = 0\n",
+      "#distinguihsed_points required is on avg. 2^11.216 pts, when |C| = 08 bits, diff = 1\n",
+      "#distinguihsed_points required is on avg. 2^10.876 pts, when |C| = 08 bits, diff = 2\n",
+      "#distinguihsed_points required is on avg. 2^10.738 pts, when |C| = 08 bits, diff = 3\n",
       "-------------------------------------------------------------------------\n",
-      "#distinguihsed_points required is on avg. 2^22.282 pts, when |C| = 16 bits, diff = 0\n",
-      "#distinguihsed_points required is on avg. 2^21.552 pts, when |C| = 16 bits, diff = 1\n",
-      "#distinguihsed_points required is on avg. 2^21.393 pts, when |C| = 16 bits, diff = 2\n",
-      "#distinguihsed_points required is on avg. 2^22.609 pts, when |C| = 16 bits, diff = 3\n",
+      "#distinguihsed_points required is on avg. 2^19.203 pts, when |C| = 16 bits, diff = 0\n",
+      "#distinguihsed_points required is on avg. 2^18.795 pts, when |C| = 16 bits, diff = 1\n",
+      "#distinguihsed_points required is on avg. 2^18.974 pts, when |C| = 16 bits, diff = 2\n",
+      "#distinguihsed_points required is on avg. 2^19.423 pts, when |C| = 16 bits, diff = 3\n",
       "-------------------------------------------------------------------------\n",
       "\n",
       "Note: avg. is the geometric mean\n"
@@ -166,7 +166,7 @@
     "# Recall: We made these inputs live in C, so we have to choose between f or g each\n",
     "#         time.\n",
     "\n",
-    "df_witness = pd.read_csv(\"claw_summary.csv.normal.csv\")\n",
+    "df_witness = pd.read_csv(\"claw_summary.csv.stop_on_witiness.csv\")\n",
     "\n",
     "print(\"stats for stopping only on witness\")\n",
     "\n",
@@ -192,6 +192,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d3a4761",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b573e19-65d7-474a-a2a0-16c8fbcf257d",
    "metadata": {},
    "outputs": [],
    "source": []
