geometric mean makes more sense. rewriting print to compare the results agains the paper

--- a/performance/summary_collisions.ipynb
+++ b/performance/summary_collisions.ipynb
@@ -10,6 +10,7 @@
     "from IPython.display import display\n",
     "import pandas as pd \n",
     "import numpy as np\n",
+    "from scipy.stats import gmean\n",
     "import itertools\n",
     "import math\n",
     "\n",
@@ -27,13 +28,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C_sizes are [16 18 20 22 24 26]\n",
+      "C_sizes are [18 20 22 24 16]\n",
       "Column Names are ['C_size', 'A_size', 'log2(nbytes)', 'difficulty', '#points', '#distinguished_points', 'log2(#distinguished_points)', '#collisions', 'log2(#collisions)', '#updates', 'time(sec)']\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"collision_summary.csv\")\n",
+    "df = pd.read_csv(\"collisions_summary.csv\")\n",
     "# Remove useless experiments! \n",
     "df = df[df['C_size'] > df['log2(nbytes)']]\n",
     "\n",
@@ -67,70 +68,71 @@
      "output_type": "stream",
      "text": [
       "avg stats for a normal run...\n",
-      "scale: sqrt(n^3/w)\n",
+      "scale: sqrt(n^3/mem)\n",
       "----------------------\n",
       "\n",
-      "C_size = 16, scale = 2^24.0/sqrt(w)\n",
-      "#distinguihsed_scaled = 0.686  σ(ndist) = 22643.57, #collisions_scaled = 0.062,  σ(col) = 2058.62, diff = 6, mem=2^12.322, nruns = 319\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 1.011  σ(ndist) = 23165.64, #collisions_scaled = 0.099,  σ(col) = 2281.69, diff = 5, mem=2^13.322, nruns = 320\n",
-      "#distinguihsed_scaled = 0.833  σ(ndist) = 15581.71, #collisions_scaled = 0.142,  σ(col) = 2670.15, diff = 5, mem=2^14.322, nruns = 320\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 1.139  σ(ndist) = 16494.70, #collisions_scaled = 0.202,  σ(col) = 2981.33, diff = 4, mem=2^15.322, nruns = 320\n",
+      "C_size = 18, scale = 2^27.0/sqrt(mem)\n",
+      "\n",
+      "- diff = 6, mem=2^13.322, nruns = 3642, #npoints/#ndist=59.83 should be 64\n",
+      "- #points= 36.202*sqrt(n^3/mem) where sqrt(n^3/mem) = 2^20.34.\n",
+      "* Note: The paper simulation always have G*sqrt(n^3/mem) where G < 10\n",
+      "Geometric mean:\n",
+      "- #points = 2^25.52, σ(lg2(npoints)) = 2.01\n",
+      "Average by summation\n",
+      "- #points = 2^ 26.58, σ(#points) = 2^ 26.88\n",
+      "- #function_updates = 2650.94, in theory it should be 3.09\n",
       "----------------------------------------\n",
       "========================================\n",
       "\n",
-      "C_size = 18, scale = 2^27.0/sqrt(w)\n",
-      "#distinguihsed_scaled = 0.688  σ(ndist) = 144775.12, #collisions_scaled = 0.036,  σ(col) = 7669.46, diff = 6, mem=2^13.322, nruns = 446\n",
-      "#distinguihsed_scaled = 0.700  σ(ndist) = 84633.24, #collisions_scaled = 0.068,  σ(col) = 8230.10, diff = 6, mem=2^14.322, nruns = 448\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.806  σ(ndist) = 75291.17, #collisions_scaled = 0.083,  σ(col) = 7770.62, diff = 5, mem=2^15.322, nruns = 447\n",
-      "#distinguihsed_scaled = 0.913  σ(ndist) = 56672.88, #collisions_scaled = 0.162,  σ(col) = 10081.81, diff = 5, mem=2^16.322, nruns = 448\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 1.092  σ(ndist) = 45878.16, #collisions_scaled = 0.201,  σ(col) = 8479.54, diff = 4, mem=2^17.322, nruns = 448\n",
+      "C_size = 20, scale = 2^30.0/sqrt(mem)\n",
+      "\n",
+      "- diff = 7, mem=2^14.322, nruns = 1726, #npoints/#ndist=120.80 should be 128\n",
+      "- #points= 34.422*sqrt(n^3/mem) where sqrt(n^3/mem) = 2^22.84.\n",
+      "* Note: The paper simulation always have G*sqrt(n^3/mem) where G < 10\n",
+      "Geometric mean:\n",
+      "- #points = 2^27.94, σ(lg2(npoints)) = 1.93\n",
+      "Average by summation\n",
+      "- #points = 2^ 28.87, σ(#points) = 2^ 29.04\n",
+      "- #function_updates = 3229.02, in theory it should be 4.59\n",
       "----------------------------------------\n",
       "========================================\n",
       "\n",
-      "C_size = 20, scale = 2^30.0/sqrt(w)\n",
-      "#distinguihsed_scaled = 0.343  σ(ndist) = 149590.00, #collisions_scaled = 0.018,  σ(col) = 8003.70, diff = 7, mem=2^14.322, nruns = 129\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.516  σ(ndist) = 318067.62, #collisions_scaled = 0.029,  σ(col) = 17695.67, diff = 6, mem=2^15.322, nruns = 154\n",
-      "#distinguihsed_scaled = 0.549  σ(ndist) = 222049.64, #collisions_scaled = 0.056,  σ(col) = 22543.16, diff = 6, mem=2^16.322, nruns = 124\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.895  σ(ndist) = 268550.47, #collisions_scaled = 0.093,  σ(col) = 27981.64, diff = 5, mem=2^17.322, nruns = 128\n",
-      "#distinguihsed_scaled = 1.053  σ(ndist) = 246247.03, #collisions_scaled = 0.189,  σ(col) = 44223.99, diff = 5, mem=2^18.322, nruns = 128\n",
+      "C_size = 22, scale = 2^33.0/sqrt(mem)\n",
+      "\n",
+      "- diff = 7, mem=2^15.322, nruns = 1173, #npoints/#ndist=126.52 should be 128\n",
+      "- #points= 13.442*sqrt(n^3/mem) where sqrt(n^3/mem) = 2^25.34.\n",
+      "* Note: The paper simulation always have G*sqrt(n^3/mem) where G < 10\n",
+      "Geometric mean:\n",
+      "- #points = 2^29.09, σ(lg2(npoints)) = 1.94\n",
+      "Average by summation\n",
+      "- #points = 2^ 29.99, σ(#points) = 2^ 30.04\n",
+      "- #function_updates = 3310.16, in theory it should be 15.80\n",
       "----------------------------------------\n",
       "========================================\n",
       "\n",
-      "C_size = 22, scale = 2^33.0/sqrt(w)\n",
-      "#distinguihsed_scaled = 0.124  σ(ndist) = 208369.37, #collisions_scaled = 0.004,  σ(col) = 6116.47, diff = 7, mem=2^15.322, nruns = 48\n",
-      "#distinguihsed_scaled = 0.098  σ(ndist) = 126446.59, #collisions_scaled = 0.005,  σ(col) = 7063.57, diff = 7, mem=2^16.322, nruns = 29\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.205  σ(ndist) = 174093.95, #collisions_scaled = 0.012,  σ(col) = 9894.30, diff = 6, mem=2^17.322, nruns = 54\n",
-      "#distinguihsed_scaled = 0.112  σ(ndist) = 110013.23, #collisions_scaled = 0.012,  σ(col) = 11364.48, diff = 6, mem=2^18.322, nruns = 53\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.145  σ(ndist) = 135971.46, #collisions_scaled = 0.015,  σ(col) = 14333.05, diff = 5, mem=2^19.322, nruns = 44\n",
+      "C_size = 24, scale = 2^36.0/sqrt(mem)\n",
+      "\n",
+      "- diff = 8, mem=2^16.322, nruns = 197, #npoints/#ndist=253.09 should be 256\n",
+      "- #points= 3.936*sqrt(n^3/mem) where sqrt(n^3/mem) = 2^27.84.\n",
+      "* Note: The paper simulation always have G*sqrt(n^3/mem) where G < 10\n",
+      "Geometric mean:\n",
+      "- #points = 2^29.82, σ(lg2(npoints)) = 1.67\n",
+      "Average by summation\n",
+      "- #points = 2^ 30.51, σ(#points) = 2^ 30.40\n",
+      "- #function_updates = 1183.79, in theory it should be 76.45\n",
       "----------------------------------------\n",
       "========================================\n",
       "\n",
-      "C_size = 24, scale = 2^36.0/sqrt(w)\n",
-      "#distinguihsed_scaled = 0.014  σ(ndist) = 105585.60, #collisions_scaled = 0.000,  σ(col) = 3108.60, diff = 8, mem=2^16.322, nruns = 5\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.045  σ(ndist) = 97560.03, #collisions_scaled = 0.001,  σ(col) = 2904.33, diff = 7, mem=2^17.322, nruns = 6\n",
-      "#distinguihsed_scaled = 0.007  σ(ndist) = 67547.46, #collisions_scaled = 0.000,  σ(col) = 3810.54, diff = 7, mem=2^18.322, nruns = 6\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.018  σ(ndist) = 94628.39, #collisions_scaled = 0.001,  σ(col) = 5377.14, diff = 6, mem=2^19.322, nruns = 10\n",
-      "#distinguihsed_scaled = 0.011  σ(ndist) = 24675.04, #collisions_scaled = 0.001,  σ(col) = 2549.70, diff = 6, mem=2^20.322, nruns = 6\n",
-      "----------------------------------------\n",
-      "========================================\n",
+      "C_size = 16, scale = 2^24.0/sqrt(mem)\n",
       "\n",
-      "C_size = 26, scale = 2^39.0/sqrt(w)\n",
-      "#distinguihsed_scaled = 0.001  σ(ndist) = 1832.22, #collisions_scaled = 0.000,  σ(col) = 28.25, diff = 8, mem=2^17.322, nruns = 2\n",
-      "#distinguihsed_scaled = 0.000  σ(ndist) = nan, #collisions_scaled = 0.000,  σ(col) = nan, diff = 8, mem=2^18.322, nruns = 1\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.005  σ(ndist) = nan, #collisions_scaled = 0.000,  σ(col) = nan, diff = 7, mem=2^20.322, nruns = 1\n",
-      "----------------------------------------\n",
-      "#distinguihsed_scaled = 0.009  σ(ndist) = 27282.35, #collisions_scaled = 0.001,  σ(col) = 1500.30, diff = 6, mem=2^21.322, nruns = 2\n",
+      "- diff = 6, mem=2^12.322, nruns = 774, #npoints/#ndist=54.10 should be 64\n",
+      "- #points= 25.594*sqrt(n^3/mem) where sqrt(n^3/mem) = 2^17.84.\n",
+      "* Note: The paper simulation always have G*sqrt(n^3/mem) where G < 10\n",
+      "Geometric mean:\n",
+      "- #points = 2^22.52, σ(lg2(npoints)) = 1.99\n",
+      "Average by summation\n",
+      "- #points = 2^ 23.51, σ(#points) = 2^ 23.70\n",
+      "- #function_updates = 729.91, in theory it should be 3.24\n",
       "----------------------------------------\n",
       "========================================\n",
       "\n"
@@ -139,11 +141,11 @@
    ],
    "source": [
     "print(\"avg stats for a normal run...\\n\"\n",
-    "     \"scale: sqrt(n^3/w)\\n\"\n",
+    "     \"scale: sqrt(n^3/mem)\\n\"\n",
     "     \"----------------------\\n\")\n",
     "\n",
     "for c in C_sizes:\n",
-    "    print(f\"C_size = {c}, scale = 2^{c*3/2}/sqrt(w)\")\n",
+    "    print(f\"C_size = {c}, scale = 2^{c*3/2}/sqrt(mem)\\n\")\n",
     "    df_C = df[df[\"C_size\"] == c]\n",
     "    \n",
     "    difficulties = df_C[\"difficulty\"].unique()\n",
@@ -156,36 +158,42 @@
     "            df_C_d_m = df_C_d[df_C_d['log2(nbytes)'] == m]\n",
     "            \n",
     "            # Calculate the mean of the desired column (e.g., 'Column1')\n",
-    "            ndist_avg = df_C_d_m[\"log2(#distinguished_points)\"].mean()\n",
-    "            npoints_avg = df_C_d_m[\"#points\"].mean()\n",
-    "            mean_collisions = df_C_d_m[\"log2(#collisions)\"].mean()\n",
+    "            ndist_avg = gmean(df_C_d_m[\"#distinguished_points\"])\n",
+    "            npoints_avg = gmean(df_C_d_m[\"#points\"])\n",
+    "            collisions_avg = gmean(df_C_d_m[\"#collisions\"])\n",
     "            \n",
     "            # in the papaer they have divided by sqrt(n^3/w)\n",
-    "            scale_factor = (c*3 - m)/2\n",
+    "            lg2_scale_factor = (c*3 - m)/2\n",
+    "            scale_factor = 2**lg2_scale_factor\n",
     "            \n",
-    "            ndist_scaled = 2**(ndist_avg - scale_factor)\n",
-    "            npoints =  2**(npoints_avg - scale_factor)\n",
-    "            ncollisions_scaled = 2**(mean_collisions - scale_factor)\n",
-    "            \n",
+    "            ndist_scaled = ndist_avg / scale_factor\n",
+    "            npoints_scaled =  npoints_avg / scale_factor\n",
+    "            ncollisions_scaled = collisions_avg / scale_factor\n",
+    "        \n",
     "            ndist_std_scaled = df_C_d_m[\"#distinguished_points\"].std() / scale_factor\n",
-    "            npoints_std_scaled = df_C_d_m[\"#points\"].std() / scale_factor\n",
+    "            log2_npoints = np.log2(df_C_d_m[\"#points\"]) # row\n",
+    "            log2_npoints_std =  log2_npoints.std() # single value\n",
+    "            \n",
+    "            npoints_std_scaled = (2**log2_npoints_std) / scale_factor\n",
     "            ncollisions_std_scaled = df_C_d_m[\"#collisions\"].std() / scale_factor\n",
     "\n",
+    "            nupdates_avg = df_C_d_m[\"#updates\"].mean()\n",
+    "            \n",
     "            # skip entries that don't have values\n",
-    "            if not (math.isnan(ndist_avg) or math.isnan(mean_collisions)):\n",
-    "                print(f\"#distinguihsed_scaled = {ndist_scaled:.03f}  σ(ndist) = {ndist_std_scaled:.2f}, #collisions_scaled = {ncollisions_scaled:.03f},  σ(col) = {ncollisions_std_scaled:.2f}, diff = {d}, mem=2^{m:.03f}, nruns = {df_C_d_m.shape[0]}\")\n",
-    "                # print(f\"#collisions = 2^{(mean_collisions/scale_factor):.03f}, #distinguihsed_pts = 2^{(mean_value/scale_factor):.03f} pts, diff = {d}, mem=2^{m:.03f}, nruns = {df_C_d_m.shape[0]}\")\n",
+    "            if not (math.isnan(ndist_avg) or math.isnan(collisions_avg)):\n",
+    "                # print(f\"collisions_avg = 2^{np.log2(collisions_avg):.2f}, npoints_std = 2^{log2_npoints_std:.2f}\")\n",
+    "                print(f\"- diff = {d}, mem=2^{m:.03f}, nruns = {df_C_d_m.shape[0]}, #npoints/#ndist={npoints_avg/ndist_avg:.2f} should be {2**d}\")\n",
+    "                print(f\"- #points= {npoints_scaled:.03f}*sqrt(n^3/mem) where sqrt(n^3/mem) = 2^{np.log2(np.sqrt(2**(3*c - m) )):.2f}.\")\n",
+    "                print(f\"* Note: The paper simulation always have G*sqrt(n^3/mem) where G < 10\")\n",
+    "                print(\"Geometric mean:\")\n",
+    "                print(f\"- #points = 2^{np.log2(npoints_avg):.2f}, σ(lg2(npoints)) = {log2_npoints_std:.2f}\")\n",
+    "                print(\"Average by summation\")\n",
+    "                print(f\"- #points = 2^{np.log2( df_C_d_m['#points'].mean() ) : .2f}, σ(#points) = 2^{np.log2( df_C_d_m['#points'].std() ) : .2f}\")\n",
+    "                print(f\"- #function_updates = {nupdates_avg:.2f}, in theory it should be {2**c / (2*collisions_avg):.2f}\")  \n",
     "        print(\"-\"*40)\n",
+    "\n",
     "    print(\"=\"*40 + \"\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a3c28ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
